--- a/libs/dataGеn/CMakeLists.txt
+++ b/libs/dataGеn/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 
-project (Writer)
+project (GenData)
 
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_library(${PROJECT_NAME} SHARED writer.cpp writer.h)
+add_library(${PROJECT_NAME} SHARED dataGеn.cpp dataGеn.h)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
