start write tests for dataGen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,25 @@ project(FilesAndStrings)
 
 set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -g -O0")
 
+set(UNITTEST ON)
+
+if(UNITTEST)
+        add_subdirectory(googletests/)
+endif()
+
+if(UNITTEST)
+        message(" output lib dir " ${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG})
+        enable_testing()
+endif()
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(FilesAndStrings main.cpp)
 
-add_subdirectory(libs/dataGеn)
+add_subdirectory(libs/dataGen)
 add_subdirectory(libs/dataWrite)
+add_subdirectory(libs/dataRead)
 
 target_link_libraries(${PROJECT_NAME} GenData)
 
