--- a/libs/dataGen/CMakeLists.txt
+++ b/libs/dataGen/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 
-project (WriteData)
+project (GenData)
 
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_library(${PROJECT_NAME} SHARED dataWrite.cpp dataWrite.h)
+add_library(${PROJECT_NAME} SHARED dataGen.cpp dataGen.h)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
