--- a/libs/dataRead/CMakeLists.txt
+++ b/libs/dataRead/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.5)
 
-project (GenData)
+project (ReadData)
 
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_library(${PROJECT_NAME} SHARED dataGеn.cpp dataGеn.h)
+add_library(${PROJECT_NAME} SHARED dataRead.cpp dataRead.h)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+include("unittest.cmake")
