--- a/libs/dataGen/CMakeLists.txt
+++ b/libs/dataGen/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 
 project (GenData)
 
-#set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_library(${PROJECT_NAME} SHARED dataGen.cpp dataGen.h)
 
