refactoring for IPack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 project(FilesAndStrings)
 
 set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -g -O0")
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 set(UNITTEST ON)
 
@@ -21,12 +22,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(FilesAndStrings main.cpp)
 
 add_subdirectory(libs/dataGen)
-add_subdirectory(libs/dataWrite)
+add_subdirectory(libs/dataPack)
 add_subdirectory(libs/dataRead)
 
 target_link_libraries(${PROJECT_NAME} GenData)
 
-target_link_libraries(${PROJECT_NAME} WriteData)
+target_link_libraries(${PROJECT_NAME} PackData)
 
 install(TARGETS FilesAndStrings
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
