--- a/libs/dataGen/CMakeLists.txt
+++ b/libs/dataGen/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
 
-project (GenData)
+project (dataGen)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_library(${PROJECT_NAME} SHARED dataGen.cpp dataGen.h)
+add_library(${PROJECT_NAME} SHARED
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+    sourse/dataGen.cpp
+    include/dataGen/dataGen.h)
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
 
 include("unittest.cmake")
