--- a/libs/dataPack/CMakeLists.txt
+++ b/libs/dataPack/CMakeLists.txt
@@ -1,23 +1,24 @@
 cmake_minimum_required(VERSION 3.5)
 
-project (PackData)
+project (dataPack)
 
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_library(${PROJECT_NAME} SHARED
-    include/ipacker.h
-    include/packerfactory.h
+    include/dataPack/ipacker.h
+    include/dataPack/packerfactory.h
+    include/dataPack/basepack.h
 
-    src/dataPack.cpp
-    src/dataPack.h
-    src/packerfactory.cpp
-    src/randPack.cpp
-    src/randPack.h
-    src/basepack.cpp
-    src/basepack.h
+#    src/dataPack.cpp
+#    src/dataPack.h
+    source/packerfactory.cpp
+#    src/randPack.cpp
+#    src/randPack.h
+   source/basepack.cpp
 
 )
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
 
 include("unittest.cmake")
