--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 
 project(FilesAndStrings)
 
-set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -g -O0")
+#set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -g -O0")
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 set(UNITTEST ON)
@@ -25,11 +25,11 @@ add_subdirectory(libs/dataGen)
 add_subdirectory(libs/dataPack)
 add_subdirectory(libs/dataRead)
 
-target_link_libraries(${PROJECT_NAME} GenData)
+target_link_libraries(${PROJECT_NAME} dataGen)
 
-target_link_libraries(${PROJECT_NAME} PackData)
+target_link_libraries(${PROJECT_NAME} dataPack)
 
-target_link_libraries(${PROJECT_NAME} ReadData)
+target_link_libraries(${PROJECT_NAME} dataRead)
 
 install(TARGETS FilesAndStrings
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
