--- a/libs/dataRead/CMakeLists.txt
+++ b/libs/dataRead/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
 
-project (ReadData)
+project (dataRead)
 
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_library(${PROJECT_NAME} SHARED dataRead.cpp dataRead.h)
+add_library(${PROJECT_NAME} SHARED
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+    source/dataRead.cpp
+    include/dataRead/dataRead.h)
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
 
 include("unittest.cmake")
